<resources>
    <string name="app_name">ReminderApp</string>

    <string name="empty_notes">There are no notes yet,\npress \'+\' to add new one</string>
    <string name="add_note_title">Adding new note</string>
    <string name="update_note_title">Updating note</string>
    <string name="enter_title">Enter title (not required)</string>
    <string name="enter_body">Enter body</string>
    <string name="add_note">Add note</string>
    <string name="update_note">Update note</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_confirm_title">Delete the note?</string>
    <string name="delete_note_confirm_message">Do you really want to delete the note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_body_length">Body length should be at least 1 symbol</string>
    <string name="note_remind_date_regexp">Remind at %s</string>
    <string name="note_remind_disabled">Not remind</string>
    <string name="note_date_pattern">dd MMM yyy, hh:mm</string>
    <string name="note_remind_date_pick_title">Pick date to remind the node</string>
</resources>